Initial structure adjustment

--- a/clients-src/modules/ROOT/pages/java/java-tutorial.adoc
+++ b/clients-src/modules/ROOT/pages/java/java-tutorial.adoc
@@ -19,13 +19,13 @@ Import the following modules:
 
 == Connecting
 
-Instantiate a TypeDB Core client and open a xref:typedb::development/connect.adoc#_sessions[session] to a
-xref:typedb::development/connect.adoc#_databases[database].
+Instantiate a TypeDB Core client and open a xref:typedb:ROOT:fundamentals.adoc#_sessions[session] to a
+xref:typedb:ROOT:fundamentals.adoc#_databases[database].
 
 [NOTE]
 ====
 Find out how to create a database in TypeDB on the
-xref:typedb:ROOT:quickstart.adoc#_create_a_database[Quickstart guide] page.
+xref:typedb:ROOT:quickstart/studio.adoc#_create_a_database[Quickstart guide] page.
 
 The name for the database should be `social_network`.
 ====
