--- a/typedb-src/modules/ROOT/pages/quickstart/drivers.adoc
+++ b/typedb-src/modules/ROOT/pages/quickstart/drivers.adoc
@@ -1,4 +1,4 @@
-= Quickstart guide
+= Connect with Driver
 :keywords: getting started, typedb, typeql, tutorial, quickstart, overview
 :longTailKeywords: get started with typedb, typedb tutorial, typedb quickstart, learn typedb
 :pageTitle: Quickstart guide
@@ -123,7 +123,7 @@ image::database-manager-iam.png[Database Manager With Phone Calls Database, widt
 
 A xref:development/schema.adoc[TypeDB schema] contains entity, relation, and attribute type definitions that make up the
 data model, as well as rules which may be applied to it -- all of which are expressed in
-xref:typeql::overview.adoc[TypeQL], TypeDB's query language.
+xref:typeql:ROOT:overview.adoc[TypeQL], TypeDB's query language.
 
 To prepare the schema definition file:
 
@@ -314,7 +314,7 @@ After completing this guide we can recommend the following order of topics to co
     * xref:fundamentals/queries.adoc[]
     * xref:fundamentals/patterns.adoc[]
     * xref:fundamentals/inference.adoc[]
-2. Find out more about how to xref:development/connect.adoc[connect] to TypeDB, and use databases, sessions,
+2. Find out more about how to xref:fundamentals.adoc[connect] to TypeDB, and use databases, sessions,
    and transactions.
 3. Learn how to define a xref:development/schema.adoc[schema] of a database.
 4. Discover how to xref:development/write.adoc[write] or xref:development/read.adoc[read] data from a TypeDB database.
