--- a/typedb-src/modules/ROOT/pages/development/response.adoc
+++ b/typedb-src/modules/ROOT/pages/development/response.adoc
@@ -1,4 +1,4 @@
-= Response interpretation
+= Process response
 :Summary: TypeDB query response interpretation.
 :keywords: typeql, query, response, result, answer, concept
 :longTailKeywords: typeql response, concept map, typeql variables
