--- a/typedb-src/modules/ROOT/pages/overview.adoc
+++ b/typedb-src/modules/ROOT/pages/overview.adoc
@@ -34,14 +34,14 @@ This is the TypeDB server documentation section. It has the following sections:
  ** xref:development/response.adoc[] -- query response formats
 // ** xref:development/api.adoc[] -- brief description of TypeDB Driver API and TypeDB Drivers
 // #todo Consider moving API to Clients section with tabs
- ** xref:development/best.adoc[] -- schema and query design tips
+ ** xref:development/best.adoc[] -- schema and query design tips, troubleshooting
 
 * *Cloud deployments*
-** xref:cloud-deployments/account.adoc[]
-** xref:cloud-deployments/connect.adoc[]
-** xref:cloud-deployments/deploy.adoc[]
-** xref:cloud-deployments/organization.adoc[]
-** xref:cloud-deployments/projects.adoc[]
+** xref:cloud-deployments/account.adoc[] -- register an account, log in/out, change password, and manage settings
+** xref:cloud-deployments/connect.adoc[] -- connect to a TypeDB Enterprise cluster/deployment
+** xref:cloud-deployments/deploy.adoc[] -- create, destroy, suspend, and resume deployments of TypeDB
+** xref:cloud-deployments/organization.adoc[] -- group users
+** xref:cloud-deployments/projects.adoc[] -- group deployments
 
 * *Self-hosted deployments*
  ** xref:self-hosted-deployments/configuration.adoc[] -- TypeDB server configuration parameters and host machine requirements
